test/files/invalid/invalid_vector_default.stderr
error: Unsupported default value
  ┌─ test/files/invalid/invalid_vector_default.fbs:2:17
  │
2 │     x:[int32] = [1];
  │                 ^^^ Vectors only support default values of null or the empty list

